--- a/source/assets/scss/views/series-detail.scss
+++ b/source/assets/scss/views/series-detail.scss
@@ -34,3 +34,21 @@
     position: sticky;
     top: 20px;
 }
+#series {
+    &[data-registered="true"] {
+        section:nth-child(n+2) {
+            display: block;
+        }
+        #please-register {
+            display: none;
+        }
+    }
+    &[data-registered="false"] {
+        section:nth-child(n+2) {
+            display: none;
+        }
+        #please-register {
+            display: block;
+        }
+    }
+}
