--- a/source/innovation/series/2019-predictions/index.html.slim
+++ b/source/innovation/series/2019-predictions/index.html.slim
@@ -2,6 +2,7 @@
 layout: basic
 ogType: article
 customCSS: "series-detail"
+customJS: "/public/js/series.js"
 ---
 ruby:
   # This template is currently designed just for blog entries. - AW
@@ -12,6 +13,8 @@ ruby:
   - current_page.data.title = collection.title + ' | Datica'
   - current_page.data.summary = (collection.has_key?("summary") ? collection.summary : 'A curated collection of writing from our Datica experts.')
   - bg_image = (collection.has_key?("featured_image") ? collection.featured_image.url : 'https://images.ctfassets.net/189dvqdsjh46/40nTU46iGkIsck8qEa0qcm/4822d250b4eb05924aa530dbd1ccf73f/working_together__looking_at_screen.jpg')
+
+  <script>var seriesId = '#{collection.id}'</script>
 
   .container-gray-2.bg-dark.gradient-dusk.product-cmi.relative
     .z-0.absolute.art-bg-fill.container-image--center.lozad.img-mix-multiply data-background-image="#{bg_image}?w=1200&h=1200"
@@ -30,10 +33,17 @@ ruby:
             .group
               = Kramdown::Document.new(collection.desc).to_html
         - if collection.has_key?("related_form")
-          #guide-form.columns.small-12.medium-large-6.large-4
-            .callout.drop
+          .columns.small-12.medium-large-6.large-4
+            #series-form.callout.drop.hide
               h3.headline-4.text-center.group Read #{collection.title}
               = partial "partials/snippets/form", :locals => { :the_form => collection["related_form"]["custom_form"] }
+            .is-registered.hide
+              h4.headline-5 Thanks for registering
+              = partial "partials/snippets/button", :locals => { :label => "Read now", :url => "", :button_classes => "button success-light", :item_id => "view-series", :icon => "icon-files", :icon_align => "right" }
+            noscript
+              h3.headline-4 Javascript and cookies are required to view this experience.
+              p If that's a problem, you can read the series on our <a class="link--white" href="/blog/">blog</a>.😊
+
         /- collection["related_entries"].each do | entry |
           - type = entry._meta.content_type_id
           - folder = case type
