--- a/source/assets/scss/views/series-detail.scss
+++ b/source/assets/scss/views/series-detail.scss
@@ -13,6 +13,9 @@
     p {
     	color: black;
     }
+    h2 {
+        font-size: 1.8rem;
+    }
 }
 .art-bg-fill {
     width: 100%;
@@ -33,6 +36,14 @@
     position: -webkit-sticky;
     position: sticky;
     top: 20px;
+    img.thumbnail {
+        width: 15rem;
+    }
+    @include breakpoint (medium) {
+        text-align: right;
+    }
+    // @include breakpoint (medium-large) {
+    // }
 }
 #series {
     &[data-registered="true"] {
