--- a/source/contentful_templates/series.html.slim
+++ b/source/contentful_templates/series.html.slim
@@ -6,32 +6,22 @@ customJS: "/public/js/series.js"
 ---
 ruby:
   series = locals[:item]
-  # This template is currently designed just for blog entries. - AW
-  # series = data.site.collections.to_a.select { |id, entry | (id == "4J4i2RsfnFJu7fDYA8XjTi") }
   current_page.data.date = DateTime.now.strftime('%B %-d, %Y')
   current_page.data.title = series["title"] + " | Datica"
   current_page.data.summary = safe_summary(series.summary)
-  if series.has_key?("share_image")
-      current_page.data.share_image = cf_asset_protocol + series["share_image"]["url"] + image_size_small
-  elsif series.has_key?("featured_image")
-      current_page.data.share_image = cf_asset_protocol + series["featured_image"]["url"] + image_size_small
+
+/ if series.has_key?("tags")
+    current_page.data.tags = get_tag_list(series["tags"])
   else
-      current_page.data.share_image = share_image_fallback
+      current_page.data.tags = "healthcare, blog, Datica Innovation Series"
   end
 
-  if series.has_key?("tags")
-      current_page.data.tags = get_tag_list(series["tags"])
-  else
-      current_page.data.tags = "healthcare, blog, IT"
-  end
-  if series.has_key?("author")
-      current_page.data.author = series["author"]["fullname"]
-  else
-      current_page.data.author = "Datica, Inc."
-  end
-
+- current_page.data.author = (series.has_key?("author") ? series.author.fullname : 'Datica, Inc.' )
+- current_page.data.share_image = (series.has_key?("share_image") ? series.share_image.url : nil)
+- current_page.data.tags = "healthcare, blog, Datica Innovation Series"
 - bg_image = (series.has_key?("featured_image") ? series.featured_image.url : 'https://images.ctfassets.net/189dvqdsjh46/40nTU46iGkIsck8qEa0qcm/4822d250b4eb05924aa530dbd1ccf73f/working_together__looking_at_screen.jpg')
 
+/ h1 = series.author.fullname
 / todo: remove collection-
   - convert 'collection' label to 'series'
   - Test as proxied page
@@ -52,14 +42,15 @@ ruby:
         h4.headline-4 = (series.has_key?("subhead") ? series.subhead : nil)
     .row.align-center
       .columns.small-12.medium-large-6.large-4
-        - if series.has_key?("desc")
+        = partial("partials/snippets/person", :locals => { :p => series.author, :style => "light" })
+        - if series.has_key?("body")
           .group
-            = Kramdown::Document.new(series.desc).to_html
+            = Kramdown::Document.new(series.body).to_html
       - if series.has_key?("related_form")
         .columns.small-12.medium-large-6.large-4
           #series-form.callout.drop.hide
             h3.headline-4.text-center.group Read #{series.title}
-            = partial "partials/snippets/form", :locals => { :the_form => collection["related_form"]["custom_form"] }
+            = partial "partials/snippets/form", :locals => { :the_form => series["related_form"]["custom_form"] }
           .is-registered.hide
             h4.headline-5 Thanks for registering
             = partial "partials/snippets/button", :locals => { :label => "Read now", :url => "", :button_classes => "button success-light", :item_id => "view-series", :icon => "icon-files", :icon_align => "right" }
