--- a/source/contentful_templates/blog.html.slim
+++ b/source/contentful_templates/blog.html.slim
@@ -90,7 +90,7 @@ ruby:
           / hr.divider
         .row.row--gutter-small.align-justify.align-middle
           - if p.has_key?("tags")
-            .columns.shrink
+            .columns.shrink.group
               = inline_svg("small/icon-tag", class: "icon-inline svg-color--gray-5")
               = partial "/partials/content/tags", :locals => p
           .columns.shrink.text-right
