--- a/source/assets/scss/mixins/functions.scss
+++ b/source/assets/scss/mixins/functions.scss
@@ -26,7 +26,12 @@
 $link-color-default: #fff !default;
 $underline: false !default;
 @mixin link-colors($color: $link-color-default, $hover-color: $color_yellow-glow, $has-underline: $underline ) {
+    font-weight: $font-weight-bold;
+    transition: border-bottom .15s linear,color .15s linear;
     color: $color !important;
+    @if $has-underline == true {
+        border-bottom: 1px solid transparent;
+    }
     &:hover {
         color: $hover-color !important;
         @if $has-underline == true {
@@ -479,4 +484,12 @@ $button-transition: transform $timing-default ease, box-shadow $timing-default e
             // fill: $color_blue;
         }
     }
+}
+@mixin coda { // puts micro logo at end of whatever, usually ::after something
+    content: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 48 48'%3E%3Cpath fill='currentColor' d='M15.6 43l4.6 5 12.1-15.1-16.7 10zM32.4 5l-4.6-5-12.1 15.1 16.7-10zM43 32.3l5-4.5-15.1-12.1 10 16.6zM5 15.7l-5 4.5 15.1 12.1-10-16.6zM31.5 43.3l6.8.4-2.1-19.3-4.7 19zM16.5 4.7l-6.8-.4 2.1 19.3 4.7-19zM43.3 16.5l.4-6.8-19.3 2.1 19 4.7zM4.7 31.5l-.4 6.8 19.3-2.1-19-4.7z'/%3E%3C/svg%3E");
+    opacity: 0.7;
+    display: inline-block;
+    width: 0.9em;
+    height: 0.9em;
+    margin-left: 0.3em;
 }
