Updated careers image with new meeting image.

--- a/source/careers/index.html.slim
+++ b/source/careers/index.html.slim
@@ -81,13 +81,13 @@ scss:
     .collection
       .row.align-center.align-middle.group--2x
         .columns.small-12.medium-4.large-6
-          img.lozad src="https://images.ctfassets.net/189dvqdsjh46/5plPYDbEUhfg7c7WcUf0j/f7c7f6f2089a77eddd9af6164ca637d2/Datica_cities_-_remote.svg" data-src="https://images.ctfassets.net/189dvqdsjh46/1T4yN0IbMwIf43G9mHIF2b/c908b04c35bd79f1d051902d429e208b/Datica_cities_-_cluster.jpg?fm=jpg&fl=progressive&w=800" alt="Datica Careers"
+          img.lozad src="https://images.ctfassets.net/189dvqdsjh46/5plPYDbEUhfg7c7WcUf0j/f7c7f6f2089a77eddd9af6164ca637d2/Datica_cities_-_remote.svg" data-src="https://images.ctfassets.net/189dvqdsjh46/1T4yN0IbMwIf43G9mHIF2b/c908b04c35bd79f1d051902d429e208b/Datica_cities_-_cluster.jpg?fm=jpg&fl=progressive&w=800" alt="Datica #remote"
         .columns.small-12.medium-8.large-6
           h3.headline-4 Remote from the ground up.
           p.lead Datica is a fully remote company, inside and out. Our team is all over the US, with clusters in Denver, San Francisco, Portland, and offices in Madison, WI and Seattle. We are looking for the best people in their fields — no matter where you are.
       .row.align-center.align-middle.group--2x
         .columns.small-12.medium-4.large-7
-          img.lozad src="https://images.ctfassets.net/189dvqdsjh46/4DdyNoJa6sEDSwhxTxnkNF/e055474ddb03882cdac59c5bf62711ee/Datica_tools_-_preview.svg" data-src="https://images.ctfassets.net/189dvqdsjh46/cR8cpADTHP4pVZq9J3rnC/07ab1075b6e4eafe1cd0a0f111325229/Datica_tools.jpg?fm=jpg&fl=progressive&w=800" alt="Datica Careers"
+          img.lozad src="https://images.ctfassets.net/189dvqdsjh46/4DdyNoJa6sEDSwhxTxnkNF/e055474ddb03882cdac59c5bf62711ee/Datica_tools_-_preview.svg" data-src="https://images.ctfassets.net/189dvqdsjh46/cR8cpADTHP4pVZq9J3rnC/cf89b5713ca6557a6d5bc8bf8c68c097/Datica_tools.jpg?fm=jpg&fl=progressive&w=800" alt="Datica Tools"
         .columns.small-12.medium-8.large-5
           h3.headline-4 Hard problems. The right tools.
           p.lead We use the latest tools for a modern, distributed workforce, to solve the hard problems of healthcare.
@@ -105,9 +105,9 @@ scss:
 
       .row.align-center.align-middle.group--2x
         .columns.small-12.medium-4.large-7
-          img.lozad src="https://images.ctfassets.net/189dvqdsjh46/24l7Rg3yevglHqcDulsUew/60929c3e09c158cd7005174909103162/Datica_people_-_preview.svg" data-src="https://images.ctfassets.net/189dvqdsjh46/72WCH5CQFrLboETgfvdaus/48d6a95623b6f9d2d0dea63362cd3e4c/Datica_people.jpg?fm=jpg&fl=progressive&w=800" alt="Datica Careers"
+          img.lozad src="https://images.ctfassets.net/189dvqdsjh46/24l7Rg3yevglHqcDulsUew/60929c3e09c158cd7005174909103162/Datica_people_-_preview.svg" data-src="https://images.ctfassets.net/189dvqdsjh46/72WCH5CQFrLboETgfvdaus/48d6a95623b6f9d2d0dea63362cd3e4c/Datica_people.jpg?fm=jpg&fl=progressive&w=800" alt="Datica People"
         .columns.small-12.medium-8.large-5
-          h3.headline-4 Decent folk who work hard and care about each other.
+          h3.headline-4 Decent folk who work hard and care about each other. 
           p.lead Relationships matter. We build trust with each other online and off. Daticans try to get together once a year or so, and more frequently in regional teams. We believe people do their best work when they're taken care of and work in a positive environment. 
           h4.headline-6.spaced-out Benefits
           ul.list-check
